--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,9 @@
 <style>
-.sign_in_header{
-color:rgb(196,60,53);
-}
-
- 
 #header {display:none;}
 #footer {display:none;}
 </style>
+
+<h5><div class="jumbotron">
 
 <% if user_signed_in? %>
 
@@ -18,10 +15,11 @@ color:rgb(196,60,53);
 
 <% else %>
 <div class="offset3 span6">
-<h1 class="sign_in_header">Ruby Benefit Fund</h1>
+<h2 class="sign_in_header">Ruby Benefit Fund</h2>
 <br> </br>
 <br><%= link_to "Sign In", new_user_session_path, :method => :get %></br>
 <br><%= link_to "Sign up", new_user_registration_path, :method => :get %></br>
 </div>
 
 <% end %>
+</div></h5>
