--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
 
   <body>
-    <div id="header">
+<div class="container-narrow">
+  <div id="header">
     <%= render 'layouts/header' %>
     </div>
       <div class="container">
@@ -23,6 +24,6 @@
       <%= yield %>
           <div id="footer">
 
-      </div></div>
+      </div>
    </body>
 </html>
