--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,15 +1,17 @@
 <h1> Customers </h1>
 
-<%= form_tag customers_path, :method => 'get'  do %>
-   <%= text_field_tag :search, params[:search], :placeholder => "name or code" %>
-   <%= submit_tag "Search", :first_name => nil, class: "btn btn-primary" %>
-   <%= link_to "New customer", new_customer_path,class: "btn-primary btn" %>
+<%= form_tag customers_path, :method => 'get', :class => "form-search" do %>
+  <%= text_field_tag :search, nil, :placeholder => "name or code", 
+      :class => "input-medium search-query" %>
+  <%= submit_tag "Find!", :name => nil, :class => "btn" %>
+  <%= link_to "New customer", new_customer_path,class: "btn" %>
 <% end %>
- <h6 class= "alert alert-info"><%= page_entries_info @customers %></h6>
 
-<div>
-<table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
 
+<h6 class= "alert alert-info"><%= page_entries_info @customers %></h6>
+
+<div> <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
+ 
   <tr>
     <th>Folio number</th>
     <th>code</th>
@@ -18,7 +20,7 @@
     <th>status</th>
     <th>photo</th>
     <th> E/D</th>
- </tr>
+  </tr>
 
   <% @customers.each do |customer| %>
 
@@ -29,17 +31,15 @@
       <td><%= customer.address%></td>
       <td><span class="label label-success"><%= customer.status%></span></td>
       <td><%= image_tag customer.photo, :size => "50x50" , class:"img-polaroid" %></td>
-      <td><%= link_to "Edit",edit_customer_path(customer),class: "btn btn-primary" %>
+      <td><%= link_to "Edit",edit_customer_path(customer),class: "btn btn-success" %>
       <%= link_to "Delete",customer_path(customer),class: "btn btn-danger",
-      method: :delete, confirm: "Are You Sure?" %>
+      method: :delete, confirm: "Are You Sure?" %></td>
+   </tr>
+  <% end %>
+ </table>
 
-</td>
-    </tr>
- <% end %>
-</table>
-</div>
 
 <%= will_paginate @customers %>
-
+</div>
 
 
