--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,34 @@
 <style>
-
 #header {display:none;}
 #footer {display:none;}
 </style>
 
-<br />
-<h2>Sign up</h2>
 
+  <section id="flashMsg">
+  <div class="alert alert-alert">You need to sign in or sign up before continuing</div>
+   </section>
+
+<div class="offset3 span6">
+
+  <h1 class="sign_up_header">Ruby Benefit Fund</h1> 
+  <h3 class="sign_up_label">sign up</h3>
+
+
+<div class="border-form-div">
+<div id="sign_up">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
-   <div><%= f.label :username %><br />
+  <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
 
+ <div><%= f.label :mobile_number %><br />
+  <%= f.text_field :mobile_number %></div>
+
+  <div><%= f.label :Address %><br/>
+  <%= f.text_area :Address, :id => "Address", :cols => 5, :rows => 3 %></div>
+      
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :address %><br />
-  <%= f.text_area :address %></div>
-
-  <div><%= f.label :mobile number %><br />
-  <%= f.text_field :mobile number %></div>  
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
@@ -28,7 +36,13 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+  <div><%= f.label :role %><br />
+  <%= f.select :role, options_for_select([["Manager", "manager"], ["Deo",  "deo"]]), { :include_blank => true } %>
+ </div>
 
+  <div><%= f.submit "Sign up"  %></div>
+<% end %>
+</div>
+</div>
+</div>
 <%= render :partial => "devise/shared/links" %>
