--- a/app/views/folios/index.html.erb
+++ b/app/views/folios/index.html.erb
@@ -1,7 +1,7 @@
 <br />
 <div>
   
-<h2>Customer Folio Details</h2>
+<h1>Customer Folio Details</h1>
 
 <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
     <tr>
@@ -10,7 +10,7 @@
         <th>Folio Number</th>
         <th>No_of_shares</th>
         <th>Customer Id</th>
-       
+        <th>Details</th>
      </tr>
 <% @folios.each do |folio| %>
     <tr>
@@ -18,6 +18,9 @@
       <td><%= folio.folio_number %></td>
       <td><%= folio.no_of_shares %></td>
       <td><%= folio.customer_id %></td>
+      <td><%= link_to(folio_path(folio), :class => 'btn btn-small btn-info') do %>
+More info <i class="icon-info-sign icon-white"></i><% end %>
+</td>
 
       </tr>
   <% end %>
