--- a/app/views/savingsdeposits/pending.html.erb
+++ b/app/views/savingsdeposits/pending.html.erb
@@ -1,5 +1,5 @@
 <br />
-<h1> Savings deposit</h1>
+<h1> pending records</h1>
   <br />
 <% if current_user.role == 'manager' %>
      <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
