--- a/app/views/savingsdeposits/approve.html.erb
+++ b/app/views/savingsdeposits/approve.html.erb
@@ -1,32 +1,58 @@
-<br />
-<h1> Savings deposit</h1>
-  <br />
-<% if current_user.role == 'manager' %>
-     <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
-  <tr>
-    <th>id</th>
-    <th>current balance</th>
-    <th>opened on</th>
-    <th>Account type</th>
-    <th>status</th>
-    <th>Details</th>
+<h1><span class="savingsdeposit">Savingsdeposit details</span></h1><br /><br />
+<div class="row">
+ <div class="span6 offset6 action_bar">
+  <div>
+  <%= link_to "Edit transaction", edit_savingsdeposit_path(:id => @savingsdeposit.id),class: "btn-primary btn" %>
+  <%= link_to "Add transaction", new_savingsdeposittransaction_path(:id => @savingsdeposit.id),class: "btn-primary btn" %>
+  </div>
+ </div></div>
+ 
+<h5><%= "#{@savingsdeposit.customer.first_name} #{@savingsdeposit.customer.last_name}               #{@savingsdeposit.customer.code}" %></h5>
 
- </tr>
-    <% @savingsdeposits.each do |savingsdeposit| %>
-      <tr>
-      <td><%= savingsdeposit.customer_id %></td>
-      <td><%= savingsdeposit.current_balance %></td>
-      <td><%= savingsdeposit.opened_on %></td>
-      <td><%= savingsdeposit.account_type %></td>
-      <td><span class="label label-success"><%= savingsdeposit.status %><%= @pending %>
-</span></td>
-      <td><%= link_to(savingsdeposit_path(savingsdeposit), :class => 'btn btn-small btn-info') do %>
-More info <i class="icon-info-sign icon-white"></i>
-                   <% end %>
-</td>
-      </tr>
-    
-  </table>
-<% end %> 
+<table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
+<tr>
+     <th>opened on</th>
+      <th>status</th>
+      <th>Account type</th>
+      <th>current balance</th>
+</tr>
+ 
+<tr>
+    <td><%= @savingsdeposit.opened_on %></td>
+    <td><%= @savingsdeposit.status %></td> 
+    <td><%= @savingsdeposit.account_type %></td> 
+    <td><%= @savingsdeposit.current_balance %></td>
+</tr>
+</table>
 
+<h1>Transaction History</h1><br />
+<table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
+<tr>
+      <th>transaction date</th>
+      <th>transaction type</th>
+      <th>transaction mode</th>
+      <th>transaction amount</th>
+      <th>particulars</th>
+      <th>status</th>
+</tr>
+<% @savingsdeposit.savingsdeposittransactions.each do |f|%>
+<tr>
+    <td><%= f.transaction_date %></td>
+    <td><%= f.transaction_type %></td>
+    <td><%= f.transaction_mode %></td>
+    <td><%= f.transaction_amount %></td>
+    <td><%= f.particulars %></td> 
+    <td><%= f.status %></td> 
+</tr>
+<% end %>
+</table>
+
+
+  <%= form_for @savingsdeposit, url: activate_savingsdeposit_path(@savingsdeposit), :html => { :method => :put } do |f| %>
+  <%= f.submit "approve record", class: "btn btn-danger"  %>
+   <% end %>
+
+<div align = "right">
+<a class="btn btn-inverse" href="/dailyproducts">Daily Product</a>
+</div>
 
