--- a/app/views/savingsdeposits/show.html.erb
+++ b/app/views/savingsdeposits/show.html.erb
@@ -3,10 +3,11 @@
 <div class="row">
  <div class="span6 offset6 action_bar">
   <div>
-   <%= link_to "Edit transaction", edit_savingsdeposit_path(:id => @savingsdeposit.id),class: "btn-primary btn" %>
+   <%= link_to "Edit transaction", edit_savingsdeposit_path,class: "btn-primary btn" %>
 
-   <%= link_to "Add transaction", new_savingsdeposittransaction_path(:id => @savingsdeposit.id),class: "btn-primary btn" %>
-   
+<% if @savingsdeposit.status == 'approved' %>
+   <%= link_to "Add transaction", new_savingsdeposittransaction_path(:id=>@savingsdeposit.id),class: "btn-primary btn" %>
+<% end %>
  </div>
  </div>
 </div>
