--- a/app/views/savingsdeposits/pending.html.erb
+++ b/app/views/savingsdeposits/pending.html.erb
@@ -1,32 +1,40 @@
+
+
+
+
+
 <br />
 <h1> pending records</h1>
   <br />
-<% if current_user.role == 'manager' %>
+
      <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
   <tr>
-    <th>id</th>
+    <th>customer id</th>
     <th>current balance</th>
     <th>opened on</th>
-    <th>Account type</th>
     <th>status</th>
+    <th>Account type</th>
     <th>Details</th>
 
  </tr>
+
     <% @savingsdeposits.each do |savingsdeposit| %>
+
+<% if savingsdeposit.status == "Pending" %>
       <tr>
       <td><%= savingsdeposit.customer_id %></td>
       <td><%= savingsdeposit.current_balance %></td>
       <td><%= savingsdeposit.opened_on %></td>
-      <td><%= savingsdeposit.account_type %></td>
-      <td><span class="label label-success"><%= savingsdeposit.status %><%= @pending %>
-</span></td>
+      <td><span class="label label-success"><%= savingsdeposit.status %></span></td>
+      <td><%= link_to "#{savingsdeposit.account_type}", approve_savingsdeposit_path(savingsdeposit) %>
+      </td>
       <td><%= link_to(savingsdeposit_path(savingsdeposit), :class => 'btn btn-small btn-info') do %>
 More info <i class="icon-info-sign icon-white"></i>
-                   <% end %>
-</td>
-      </tr>
-    
-  </table>
+          <% end %></td>
+
+</tr>
+    <% end %> 
 <% end %> 
+ </table>
 
-
+  
