--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,4 +1,11 @@
+<style>
+#header {display:none;}
+#footer {display:none;}
+</style>
 
-<h2><%= link_to "Click here to list all customers", customers_path%></h2>
-
+<div class="offset3 span6">
+<h2>Successfully Registered...</h2>
+<h2>You need to signin now</h2>
+<br><%= link_to "Sign In", new_user_session_path, :method => :get,class: "btn" %></br>
+</div>
 
