--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -3,7 +3,8 @@
  
  <%= form_for @customer, :html => {:multipart => true} do |f| %>
   <% if @customer.errors.any? %>
-  <h4>Customer not added</h4>
+ <section id="flashMsg">
+<div class="alert alert-block alert-error"> <a class="close" data-dismiss="alert" href="#">X</a> <h4 class="alert-heading">Error!</h4> updation failed </div>  </section>
   <ul>
   <% @customer.errors.full_messages.each do |error| %>
   <li><%= error %></li>
