--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,20 +4,20 @@
 </style>
 
 
-  <section id="flashMsg">
-  <div class="alert alert-alert">You need to sign in or sign up before continuing</div>
-   </section>
+   <section id="flashMsg">
+<div class="alert alert-block alert-info"> <a class="close" data-dismiss="alert" href="#">X</a> <h4 class="alert-heading">Info!</h4>You need to sign in or sign up before continuing</div> 
+  </section>
 
 <div class="offset3 span6">
-
   <h1 class="sign_up_header">Ruby Benefit Fund</h1> 
   <h3 class="sign_up_label">sign up</h3>
-
+</div>
 
 <div class="border-form-div">
 <div id="sign_up">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+
   <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
 
