--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -6,19 +6,22 @@
 </style>
 
   <section id="flashMsg">
-  <div class="alert alert-alert">You need to sign in or sign up before continuing</div>
+<div class="alert alert-block alert-info"> <a class="close" data-dismiss="alert" href="#">X</a> <h4 class="alert-heading">Info!</h4>You need to sign in or sign up before continuing</div> 
   </section>
- 
- <div class="row">
 
+
+<div class="row">
+<div class="offset3 span6">
   <h1 class="sign_up_header">Ruby Benefit Fund</h1> 
   <h3 class="sign_up_label">sign up</h3>
-  <div id="sign_up">
 
+  <div id="sign_up">
+</div>
 <div class="border-form-div">
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+
   <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
 
