--- a/app/views/savingsdeposits/pending.html.erb
+++ b/app/views/savingsdeposits/pending.html.erb
@@ -1,10 +1,5 @@
-
-
-
-
-
 <br />
-<h1> pending records</h1>
+<h1> Pending records</h1>
   <br />
 
      <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
@@ -25,13 +20,10 @@
       <td><%= savingsdeposit.customer_id %></td>
       <td><%= savingsdeposit.current_balance %></td>
       <td><%= savingsdeposit.opened_on %></td>
-      <td><span class="label label-success"><%= savingsdeposit.status %></span></td>
+      <td><span class="label label-warning"><%= savingsdeposit.status %></span></td>
       <td><%= link_to "#{savingsdeposit.account_type}", approve_savingsdeposit_path(savingsdeposit) %>
       </td>
-      <td><%= link_to(savingsdeposit_path(savingsdeposit), :class => 'btn btn-small btn-info') do %>
-More info <i class="icon-info-sign icon-white"></i>
-          <% end %></td>
-
+      
 </tr>
     <% end %> 
 <% end %> 
